reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__serde__generic_flatten_typevar_in_generic_context-2.snap
---
source: reflectapi-demo/src/tests/serde.rs
expression: "super :: into_typescript_code :: <\nTestWithMarkedInner<TestFlattenIdent, TestFlattenIdentData> > ()"
---
// DO NOT MODIFY THIS FILE MANUALLY
// This file was generated by reflectapi-cli
//
// Schema name:
//

export function client(base: string | Client): __definition.Interface {
  return __implementation.__client(base);
}

export namespace __definition {
  export interface Interface {
    inout_test: (
      input: reflectapi_demo.tests.serde.TestWithMarkedInner<
        reflectapi_demo.tests.serde.TestFlattenIdent,
        reflectapi_demo.tests.serde.TestFlattenIdentData
      >,
      headers: {},
      options?: RequestOptions,
    ) => AsyncResult<
      reflectapi_demo.tests.serde.TestWithMarkedInner<
        reflectapi_demo.tests.serde.TestFlattenIdent,
        reflectapi_demo.tests.serde.TestFlattenIdentData
      >,
      {}
    >;
  }
}
export namespace reflectapi {
  /**
   * Struct object with no fields
   */
  export interface Empty {}

  /**
   * Error object which is expected to be never returned
   */
  export interface Infallible {}
}

export namespace reflectapi_demo {
  export namespace tests {
    export namespace serde {
      export interface TestFlattenIdent {
        job_id: number /* u64 */;
      }

      export interface TestFlattenIdentData {
        payload: string;
      }

      export type TestIdentityData<I, D> = {} & NullToEmptyObject<I> &
        NullToEmptyObject<D>;

      export interface TestWithMarkedInner<I, D> {
        body: reflectapi_demo.tests.serde.TestIdentityData<I, D>;
        extra: boolean;
      }
    }
  }
}

namespace __implementation {

  function inout_test(client: Client) {
    return (
      input: reflectapi_demo.tests.serde.TestWithMarkedInner<
        reflectapi_demo.tests.serde.TestFlattenIdent,
        reflectapi_demo.tests.serde.TestFlattenIdentData
      >,
      headers: {},
      options?: RequestOptions,
    ) =>
      __request<
        reflectapi_demo.tests.serde.TestWithMarkedInner<
          reflectapi_demo.tests.serde.TestFlattenIdent,
          reflectapi_demo.tests.serde.TestFlattenIdentData
        >,
        {},
        reflectapi_demo.tests.serde.TestWithMarkedInner<
          reflectapi_demo.tests.serde.TestFlattenIdent,
          reflectapi_demo.tests.serde.TestFlattenIdentData
        >,
        {}
      >(client, "/inout_test", input, headers, options);
  }
}
