reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__serde__generic_flatten_typevar_in_generic_context-4.snap
---
source: reflectapi-demo/src/tests/serde.rs
expression: "reflectapi :: codegen :: openapi :: Spec :: from(& schema)"
---
{
  "openapi": "3.1.0",
  "info": {
    "title": "",
    "description": "",
    "version": "1.0.0"
  },
  "paths": {
    "/inout_test": {
      "description": "",
      "post": {
        "operationId": "inout_test",
        "requestBody": {
          "content": {
            "application/json": {
              "schema": {
                "type": "object",
                "title": "reflectapi_demo.tests.serde.TestWithMarkedInner<reflectapi_demo.tests.serde.TestFlattenIdent, reflectapi_demo.tests.serde.TestFlattenIdentData>",
                "required": [
                  "body",
                  "extra"
                ],
                "properties": {
                  "body": {
                    "allOf": [
                      {
                        "$ref": "#/components/schemas/reflectapi_demo.tests.serde.TestFlattenIdent"
                      },
                      {
                        "$ref": "#/components/schemas/reflectapi_demo.tests.serde.TestFlattenIdentData"
                      },
                      {
                        "type": "object",
                        "title": "reflectapi_demo.tests.serde.TestIdentityData<reflectapi_demo.tests.serde.TestFlattenIdent, reflectapi_demo.tests.serde.TestFlattenIdentData>",
                        "properties": {}
                      }
                    ]
                  },
                  "extra": {
                    "$ref": "#/components/schemas/bool"
                  }
                }
              }
            }
          },
          "required": true
        },
        "responses": {
          "200": {
            "description": "200 OK",
            "content": {
              "application/json": {
                "schema": {
                  "type": "object",
                  "title": "reflectapi_demo.tests.serde.TestWithMarkedInner<reflectapi_demo.tests.serde.TestFlattenIdent, reflectapi_demo.tests.serde.TestFlattenIdentData>",
                  "required": [
                    "body",
                    "extra"
                  ],
                  "properties": {
                    "body": {
                      "allOf": [
                        {
                          "$ref": "#/components/schemas/reflectapi_demo.tests.serde.TestFlattenIdent"
                        },
                        {
                          "$ref": "#/components/schemas/reflectapi_demo.tests.serde.TestFlattenIdentData"
                        },
                        {
                          "type": "object",
                          "title": "reflectapi_demo.tests.serde.TestIdentityData<reflectapi_demo.tests.serde.TestFlattenIdent, reflectapi_demo.tests.serde.TestFlattenIdentData>",
                          "properties": {}
                        }
                      ]
                    },
                    "extra": {
                      "$ref": "#/components/schemas/bool"
                    }
                  }
                }
              }
            }
          }
        }
      }
    }
  },
  "components": {
    "schemas": {
      "bool": {
        "description": "Boolean value",
        "type": "boolean"
      },
      "reflectapi_demo.tests.serde.TestFlattenIdent": {
        "type": "object",
        "title": "reflectapi_demo.tests.serde.TestFlattenIdent",
        "required": [
          "job_id"
        ],
        "properties": {
          "job_id": {
            "$ref": "#/components/schemas/u64"
          }
        }
      },
      "reflectapi_demo.tests.serde.TestFlattenIdentData": {
        "type": "object",
        "title": "reflectapi_demo.tests.serde.TestFlattenIdentData",
        "required": [
          "payload"
        ],
        "properties": {
          "payload": {
            "$ref": "#/components/schemas/std.string.String"
          }
        }
      },
      "std.string.String": {
        "description": "UTF-8 encoded string",
        "type": "string"
      },
      "u64": {
        "description": "64-bit unsigned integer",
        "type": "integer"
      }
    }
  }
}
