reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__serde__generic_flatten_typevar_in_generic_context-5.snap
---
source: reflectapi-demo/src/tests/serde.rs
expression: "super :: into_python_code :: <\nTestWithMarkedInner<TestFlattenIdent, TestFlattenIdentData> > ()"
---
"""
Generated Python client for api_client.

DO NOT MODIFY THIS FILE MANUALLY.
This file is automatically generated by ReflectAPI.
"""

from __future__ import annotations


# Standard library imports
from typing import Annotated, Any, Generic, Optional, TypeVar, Union

# Third-party imports
from pydantic import BaseModel, ConfigDict, Field

# Runtime imports
from reflectapi_runtime import AsyncClientBase, ClientBase, ApiResponse
from reflectapi_runtime import ReflectapiEmpty
from reflectapi_runtime import ReflectapiInfallible


class ReflectapiDemoTestsSerdeTestFlattenIdent(BaseModel):
    model_config = ConfigDict(extra="ignore", populate_by_name=True)

    job_id: int


class ReflectapiDemoTestsSerdeTestFlattenIdentData(BaseModel):
    model_config = ConfigDict(extra="ignore", populate_by_name=True)

    payload: str


class ReflectapiDemoTestsSerdeTestIdentityDataReflectapiDemoTestsSerdeTestFlatF60133e4(
    BaseModel
):
    model_config = ConfigDict(extra="ignore", populate_by_name=True)

    job_id: int
    payload: str


class ReflectapiDemoTestsSerdeTestWithMarkedInnerReflectapiDemoTestsSerdeTestF02f28d66(
    BaseModel
):
    model_config = ConfigDict(extra="ignore", populate_by_name=True)

    body: reflectapi_demo.tests.serde.TestIdentityDataReflectapiDemoTestsSerdeTestFlatF60133e4
    extra: bool


# Namespace classes for dotted access to types
class reflectapi_demo:
    """Namespace for reflectapi_demo types."""

    class tests:
        """Namespace for tests types."""

        class serde:
            """Namespace for serde types."""

            TestFlattenIdent = ReflectapiDemoTestsSerdeTestFlattenIdent
            TestFlattenIdentData = ReflectapiDemoTestsSerdeTestFlattenIdentData
            TestIdentityDataReflectapiDemoTestsSerdeTestFlatF60133e4 = ReflectapiDemoTestsSerdeTestIdentityDataReflectapiDemoTestsSerdeTestFlatF60133e4
            TestWithMarkedInnerReflectapiDemoTestsSerdeTestF02f28d66 = ReflectapiDemoTestsSerdeTestWithMarkedInnerReflectapiDemoTestsSerdeTestF02f28d66


class AsyncInoutClient:
    """Async client for inout operations."""

    def __init__(self, client: AsyncClientBase) -> None:
        self._client = client

    async def test(
        self,
        data: Optional[
            reflectapi_demo.tests.serde.TestWithMarkedInnerReflectapiDemoTestsSerdeTestF02f28d66
        ] = None,
    ) -> ApiResponse[
        reflectapi_demo.tests.serde.TestWithMarkedInnerReflectapiDemoTestsSerdeTestF02f28d66
    ]:
        """

        Args:
            data: Request data for the test operation.

        Returns:
            ApiResponse[reflectapi_demo.tests.serde.TestWithMarkedInnerReflectapiDemoTestsSerdeTestF02f28d66]: Response containing reflectapi_demo.tests.serde.TestWithMarkedInnerReflectapiDemoTestsSerdeTestF02f28d66 data
        """
        path = "/inout_test"

        params: dict[str, Any] = {}
        return await self._client._make_request(
            path,
            params=params if params else None,
            json_model=data,
            response_model=reflectapi_demo.tests.serde.TestWithMarkedInnerReflectapiDemoTestsSerdeTestF02f28d66,
        )


class AsyncClient(AsyncClientBase):
    """Async client for the API."""

    def __init__(
        self,
        base_url: str,
        **kwargs: Any,
    ) -> None:
        super().__init__(base_url, **kwargs)

        self.inout = AsyncInoutClient(self)


class InoutClient:
    """Synchronous client for inout operations."""

    def __init__(self, client: ClientBase) -> None:
        self._client = client

    def test(
        self,
        data: Optional[
            reflectapi_demo.tests.serde.TestWithMarkedInnerReflectapiDemoTestsSerdeTestF02f28d66
        ] = None,
    ) -> ApiResponse[
        reflectapi_demo.tests.serde.TestWithMarkedInnerReflectapiDemoTestsSerdeTestF02f28d66
    ]:
        """

        Args:
            data: Request data for the test operation.

        Returns:
            ApiResponse[reflectapi_demo.tests.serde.TestWithMarkedInnerReflectapiDemoTestsSerdeTestF02f28d66]: Response containing reflectapi_demo.tests.serde.TestWithMarkedInnerReflectapiDemoTestsSerdeTestF02f28d66 data
        """
        path = "/inout_test"

        params: dict[str, Any] = {}
        return self._client._make_request(
            path,
            params=params if params else None,
            json_model=data,
            response_model=reflectapi_demo.tests.serde.TestWithMarkedInnerReflectapiDemoTestsSerdeTestF02f28d66,
        )


class Client(ClientBase):
    """Synchronous client for the API."""

    def __init__(
        self,
        base_url: str,
        **kwargs: Any,
    ) -> None:
        super().__init__(base_url, **kwargs)

        self.inout = InoutClient(self)


# External type definitions
StdNumNonZeroU32 = Annotated[int, "Rust NonZero u32 type"]
StdNumNonZeroU64 = Annotated[int, "Rust NonZero u64 type"]
StdNumNonZeroI32 = Annotated[int, "Rust NonZero i32 type"]
StdNumNonZeroI64 = Annotated[int, "Rust NonZero i64 type"]

# Rebuild models to resolve forward references
for _model in [
    ReflectapiDemoTestsSerdeTestFlattenIdent,
    ReflectapiDemoTestsSerdeTestFlattenIdentData,
    ReflectapiDemoTestsSerdeTestIdentityDataReflectapiDemoTestsSerdeTestFlatF60133e4,
    ReflectapiDemoTestsSerdeTestWithMarkedInnerReflectapiDemoTestsSerdeTestF02f28d66,
]:
    try:
        _model.model_rebuild()
    except Exception:
        pass
