reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__serde__generic_flatten_typevar_nested_in_generic_arg-2.snap
---
source: reflectapi-demo/src/tests/serde.rs
expression: "super :: into_typescript_code :: <\nTestWrapperWithNestedTypevarArg<TestFlattenInner> > ()"
---
// DO NOT MODIFY THIS FILE MANUALLY
// This file was generated by reflectapi-cli
//
// Schema name:

export function client(base: string | Client): __definition.Interface {
  return __implementation.__client(base);
}

export namespace __definition {
  export interface Interface {
    inout_test: (
      input: reflectapi_demo.tests.serde.TestWrapperWithNestedTypevarArg<reflectapi_demo.tests.serde.TestFlattenInner>,
      headers: {},
      options?: RequestOptions,
    ) => AsyncResult<
      reflectapi_demo.tests.serde.TestWrapperWithNestedTypevarArg<reflectapi_demo.tests.serde.TestFlattenInner>,
      {}
    >;
  }
}
export namespace reflectapi {
  /**
   * Struct object with no fields
   */
  export interface Empty {}

  /**
   * Error object which is expected to be never returned
   */
  export interface Infallible {}
}

export namespace reflectapi_demo {
  export namespace tests {
    export namespace serde {
      export interface TestFlattenIfElse {
        code: number /* u16 */;
      }

      export interface TestFlattenInner {
        inner_a: number /* u32 */;
        inner_b: string;
      }

      export type TestUpdateOrElse<T, C> = {
        if_else?: C | null;
      } & NullToEmptyObject<T>;

      export interface TestWrapperWithNestedTypevarArg<I> {
        body: reflectapi_demo.tests.serde.TestUpdateOrElse<
          I | null,
          reflectapi_demo.tests.serde.TestFlattenIfElse
        >;
        extra: number /* u32 */;
      }
    }
  }
}

namespace __implementation {

  function inout_test(client: Client) {
    return (
      input: reflectapi_demo.tests.serde.TestWrapperWithNestedTypevarArg<reflectapi_demo.tests.serde.TestFlattenInner>,
      headers: {},
      options?: RequestOptions,
    ) =>
      __request<
        reflectapi_demo.tests.serde.TestWrapperWithNestedTypevarArg<reflectapi_demo.tests.serde.TestFlattenInner>,
        {},
        reflectapi_demo.tests.serde.TestWrapperWithNestedTypevarArg<reflectapi_demo.tests.serde.TestFlattenInner>,
        {}
      >(client, "/inout_test", input, headers, options);
  }
}
